# sloth-doc

./: .gitignore  README.md  cspell.json  deploy.sh  mkdocs.yml  pyproject.toml  requirements
docs/: index.md  ssh-key.md  vscode.md
docs/env/: setup.md  vscode.md
docs/getting-started/: allure-report.md  installation.md  project-structure.md  report.md  the-first-case.md
docs/guide/: element-locating.md  locate-element.md  task-executor.md  voice-engine.md  work-with-multiple-devices.md  working-with-multiple-devices.md
docs/intro/: intro.md
docs/manual/: monkey.md  sync-report.md
docs/watch/: batch-runner.md
env/: setup.md
intro/: intro.md
